- Set up Next.js 14 with TypeScript, App Router, and Sass - Configure ESLint, Prettier, and Vitest with 80% coverage threshold - Implement feature-based architecture with shared code organization - Add GitHub Actions CI/CD pipelines (lint, test, build, Lighthouse) - Set up pre-commit hooks with lefthook - Configure Lighthouse CI with Web Vitals budgets - Add architecture documentation and setup guides

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
+.nyc_output
 
 # next.js
 /.next/
@@ -23,6 +25,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # local env files
 .env*.local
@@ -34,3 +37,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# lefthook
+.lefthook-local
+
+# lighthouse
+.lighthouseci
